--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepsi Landing Page</title>
+    <link rel="icon" href="#">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" charset="utf-8" defer></script>
   </head>
   <body>
-
+    <section class="sec">
+      <header>
+        <a href="#"> <img src="img/logo.png" class="logo"></a>
+        <div class="toggleMenu" onclick="menuToggle()" ></div>
+        <ul class="navigation">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">What's New</a></li>
+          <li><a href="#">Newsletter</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
+      <div class="content">
+        <div class="textBox">
+          <h2>That's What <br> <span>I like</span> </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="#">View All Products</a>
+        </div>
+        <div class="imgBox">
+          <img src="img/pepsi001.png" class="pepsi">
+        </div>
+      </div>
+      <ul class="thumb">
+        <li> <img src="img/pepsi001.png" onclick= "imgSlider('img/pepsi001.png'); changeBGcolor('#0062be')"> </li>
+        <li> <img src="img/pepsi002.png" onclick= "imgSlider('img/pepsi002.png'); changeBGcolor('#e60c2c')"> </li>
+        <li> <img src="img/pepsi003.png" onclick= "imgSlider('img/pepsi003.png'); changeBGcolor('#1e1e1e')"> </li>
+      </ul>
+      <ul class="sci">
+        <li> <a href="#"> <img src="img/facebook.png"> </a> </li>
+        <li> <a href="#"> <img src="img/twitter.png"> </a> </li>
+        <li> <a href="#"> <img src="img/instagram.png"> </a> </li>
+      </ul>
+    </section>
   </body>
 </html>
