--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
         </div>
       </div>
       <ul class="thumb">
-        <li> <img src="img/pepsi001.png" onclick= "imgSlider('img/pepsi001.png'); changeBGcolor('#0062be')"> </li>
+        <!-- <li id="list01"> <img src="img/pepsi001.png" onclick= "imgSlider('img/pepsi001.png'); changeBGcolor('#0062be')"> </li>
         <li> <img src="img/pepsi002.png" onclick= "imgSlider('img/pepsi002.png'); changeBGcolor('#e60c2c')"> </li>
-        <li> <img src="img/pepsi003.png" onclick= "imgSlider('img/pepsi003.png'); changeBGcolor('#1e1e1e')"> </li>
+        <li> <img src="img/pepsi003.png" onclick= "imgSlider('img/pepsi003.png'); changeBGcolor('#1e1e1e')"> </li> -->
+        <li> <img id="list01" src="img/pepsi001.png" class="changeColor"> </li>
+        <li> <img id="list02" src="img/pepsi002.png" class="changeColor"> </li>
+        <li> <img id="list03" src="img/pepsi003.png" class="changeColor"> </li>
+
       </ul>
       <ul class="sci">
         <li> <a href="#"> <img src="img/facebook.png"> </a> </li>
